Modificações não enviadas pra banca.

--- a/bibliothek.bib
+++ b/bibliothek.bib
@@ -580,3 +580,16 @@
 	title = {{Techniques d'analyse de stabilit{\'{e}} et synth{\`{e}}se de contr{\^{o}}le pour des syst{\`{e}}mes hyperboliques}},
 	year = {2017}
 }
+
+@article{article:esousa,
+	author = {SOUSA, {\'{A}}lan C. E. and LEITE, Valter J. S. and {RUBIO SCOLA}, Ignacio},
+	doi = {10.24846/v27i3y201802},
+	issn = {12201766},
+	journal = {Studies in Informatics and Control},
+	month = {oct},
+	number = {3},
+	pages = {265--274},
+	title = {{Affordable Control Platform with MPC Application}},
+	volume = {27},
+	year = {2018}
+}
