--- a/chapter2.tex
+++ b/chapter2.tex
@@ -39,11 +39,12 @@ multivariável com restrições, típico nas indústrias química e petroquímic
 Antes do desenvolvimento dessa técnica o controle era feito por várias malhas em
 cascata~\cite{article:cutler}.
 
-Seu impacto na indústria foi gigante~\cite{article:morari}. Provavelmente não há
-nenhuma empresa extratora de petróleo que não utilize esta técnica ou uma
-derivada. O desenvolvimento do \ac{MPC} se deu como uma tentativa de entender o
-\ac{DMC}, que parecia desafiar a análise teórica tradicional por ser formulado
-de maneira não convencional. Por exemplo, outra técnica, a \ac{IMC} ---
+O MPC gerou impacto na indústria, especialmente a
+petroquímica~\cite{article:morari}. Provavelmente não há nenhuma empresa
+extratora de petróleo que não utilize esta técnica ou uma derivada. O
+desenvolvimento do \ac{MPC} se deu como uma tentativa de entender o \ac{DMC},
+que parecia desafiar a análise teórica tradicional por ser formulado de maneira
+não convencional. Por exemplo, outra técnica, a \ac{IMC} ---
 \textit{Internal Model Control} --- falhou em explicar o funcionamento do \ac{DMC}
 mas acabou ajudando no desenvolvimento do controle
 robusto~\cite{article:morari}.
