--- a/chapter4.tex
+++ b/chapter4.tex
@@ -547,7 +547,7 @@ podemos escrever os elementos dentro de \(\Delta{}U\) como
 		\delta{}(i)           &
 		\delta{}(i-1)         &
 		\hdots{}              &
-		\delta{}(i - N_c + 1) &
+		\delta{}(i - N_c + 1)
 	\end{bmatrix}\Delta{}U,
 \end{equation}
 %
