--- a/meta.tex
+++ b/meta.tex
@@ -90,3 +90,6 @@
 {autogobble,linenos,fontseries=Consolas,fontsize=\scriptsize,frame=lines}
 
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
+% more space between lines in table.
+\renewcommand{\arraystretch}{1.2}
