--- a/agradecimento.tex
+++ b/agradecimento.tex
@@ -9,8 +9,9 @@ aos meus pais por todo o apoio e confiança em mim depositados;\\[2mm]
 ao Prof.\ Valter por toda a paciência e empenho nesses 2 anos de orientação;\\[2mm]
 ao Prof.\ Ignacio pelas conversas e esclarecimentos;\\[2mm]
 aos colegas de trabalho mais próximos: Nelson Figueredo, Ângelo Eugênio,
-Mariella Maia, Michelle Faria, Anderson Bento, Mário Cipriano, Bernardo Amim e
-Luis Gustavo a convivência descontraída e as trocas de experiências;\\[2mm]
+Mariella Maia, Michelle Faria, Anderson Bento, Mário Cipriano, Bernardo Amim,
+Luis Gustavo e Rafael Silveira a convivência descontraída e as trocas de
+experiências;\\[2mm]
 aos demais colegas do Grupo de Modelagem e Controle de Sistemas Mecatrônicos a
 ótima convivência;\\[2mm]
 a todos que de alguma forma contribuíram com o meu progresso.
