--- a/document.tex
+++ b/document.tex
@@ -45,6 +45,10 @@
   \thispagestyle{plain}
   \cleardoublepage{}
 
+  \listofcodes*{}
+  \thispagestyle{plain}
+  \cleardoublepage{}
+
   \input{abbrpage}
   \cleardoublepage{}
 
